--- a/resources/scss/public/partials/_showcase.scss
+++ b/resources/scss/public/partials/_showcase.scss
@@ -10,7 +10,8 @@
         overflow:hidden;
         transform:skewY(-9deg);
         transform-origin:0;
-        background:linear-gradient(0deg,#edf2f7,rgba(237,242,247,0));;
+        background:linear-gradient(0deg,#edf2f7,rgba(237,242,247,0));
+        box-shadow:$standard-shadow;
 
     }
     .container{
