--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -1,12 +1,12 @@
 /* Primary colors */
 
 $primary: #de6161;
-$secondary: #2657eb;
+$secondary: #54a8e0;
 
 //#4568DC
 //#B06AB3
 $g2-primary:#24C6DC;
-$g2-secondary:#2657eb;
+$g2-secondary:#54a8e0;
 $secondary-blue:#54a8e0;
 
 $primary-navy: #6B7C93;
