--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -14,6 +14,7 @@ header{
         backface-visibility: hidden;
         opacity:0.8;
         z-index:1;
+        box-shadow:$standard-shadow;
     }
 
     .background-image{
