--- a/resources/scss/public/partials/_treehouse.scss
+++ b/resources/scss/public/partials/_treehouse.scss
@@ -126,7 +126,7 @@
                             position:relative;
                             width:190px;
                             height:80px;
-                            background-color:#fff;
+                            background-color:#f3f3f3;
                             margin:5px;
                             padding:10px 15px 10px 15px;
                             border-radius:5px;
@@ -140,6 +140,7 @@
                             &:hover{
                                 transform:translateY(-1px);
                                 box-shadow:$hover-shadow;
+                                background-color:lighten(#f3f3f3, 5%);
                             }
                             
                             a{
