--- a/resources/scss/public/partials/_span-background.scss
+++ b/resources/scss/public/partials/_span-background.scss
@@ -28,6 +28,7 @@
                 &:nth-child(3){
                     top:33%;
                     right:18%;
+                    background:linear-gradient(150deg, #fafafa 34%, $g2-secondary 84%);
                 }
                 &:nth-child(4){
                     top:66%;
