--- a/resources/scss/public/partials/_footer.scss
+++ b/resources/scss/public/partials/_footer.scss
@@ -19,7 +19,7 @@ footer{
         }
 
         .row{
-
+            padding-left:80px;
             .col-md-6{
                 position:relative;
 
@@ -278,7 +278,7 @@ footer{
                 }
 
                 .title-box{
-                    margin-left:-70px;
+                    margin-left:-50px;
 
                     @media only screen and (max-width:1450px) {
                         margin-left:-70px;
