--- a/resources/scss/public/partials/_reference.scss
+++ b/resources/scss/public/partials/_reference.scss
@@ -71,6 +71,7 @@
                         left:0;
                         right:0;
                         margin:0 auto;
+                        width:240px;
                     }
                     .text-heading{
                         position:absolute;
