--- a/resources/scss/public/partials/_footer.scss
+++ b/resources/scss/public/partials/_footer.scss
@@ -19,9 +19,20 @@ footer{
         }
 
         .row{
-            padding-left:80px;
+            padding-left:40px;
+            padding-right:40px;
+
+            @media only screen and (max-width:1199px){
+                padding-left:0;
+                padding-right:0;
+            }
+
             .col-md-6{
                 position:relative;
+
+                @media only screen and (max-width:991px) {
+                    text-align:center;
+                }  
 
                 .form{
                     position:relative;
@@ -35,6 +46,11 @@ footer{
                     background-size:950px;
                     background-position-y:-53px;
                     background-position-x:-249px;
+
+                    
+                    @media only screen and (max-width:991px) {
+                        margin:0 auto;
+                    }  
 
                     form{
                         padding:9px 13px;
@@ -201,6 +217,20 @@ footer{
                     background: #fff;
                     box-shadow: inset 0 4px 7px 1px #fff, inset 0 -5px 20px rgba(173,186,204,.25), 0 2px 6px rgba(0,21,64,.14), 0 10px 20px rgba(0,21,64,.05);
 
+                    @media only screen and (max-width:1319px) {
+                        left:-130px;
+                    }
+
+                    @media only screen and (max-width:1199px) {
+                        left:-90px;
+                    }
+
+                    @media only screen and (max-width:991px) {
+                        left:0;
+                        margin:0 auto;
+                        margin-bottom:40px;
+                    }
+
                     .camera-hori{
                         position:absolute;
                         top:155px;
@@ -227,12 +257,6 @@ footer{
                         background-color:#f7f7f7;
                         border:1px solid #f2f2f2;
                         border-radius:3px;
-
-                        @media only screen and (max-width:1319px) {
-                            left:-130px;
-                        }
-
-
 
                         .envelope-wrapper{
                             top:25px;
@@ -278,29 +302,31 @@ footer{
                 }
 
                 .title-box{
-                    margin-left:-50px;
+                    margin-left:20px;
+                    margin-top:65px;
+                    margin-bottom:45px;
 
-                    @media only screen and (max-width:1450px) {
-                        margin-left:-70px;
+                    @media only screen and (max-width:1199px) {
+                        margin-left:70px;
                     }
 
-                    @media only screen and (max-width:1319px) {
-                        margin-left:40px;
-                    }         
-
-                    h2{
-                            margin-top:65px;
-                        }
-
-                        .explain{
-                            color:$text-color;
-                            margin-bottom:45px;
-                        }
+                    @media only screen and (max-width:991px){
+                        display:table;
+                        margin:0 auto;
+                        margin-bottom:25px;
                     }
+
+                    .explain{
+                        color:$text-color;
+                    }
+                }
 
                 &:last-child{
                     padding-left:50px;
 
+                    @media only screen and (max-width:991px){
+                        padding:0;
+                    }
                 }
             }
         }
