--- a/resources/scss/public/partials/_intro.scss
+++ b/resources/scss/public/partials/_intro.scss
@@ -39,6 +39,9 @@
                     right:-305px;
                     z-index:20;
                     
+                    @media only screen and (max-width:991px){
+                        display:none;
+                    }
                 }
             }
         }
