--- a/resources/scss/public/partials/_skillset.scss
+++ b/resources/scss/public/partials/_skillset.scss
@@ -47,6 +47,11 @@ $skillset-height: 1300px;
                 padding-top:70px;
                 padding-left:30px;
                 text-align:left;
+
+                @media only screen and (max-width:991px){
+                    margin-top:-550px;
+                }
+
                 h4{
                     color:$gray-font;
                 }
@@ -82,9 +87,15 @@ $skillset-height: 1300px;
             .tile-wrapper{
                 position:relative;
                 padding-right:85px;
+
+                @media only screen and (max-width:991px){
+                    margin-top:340px;
+                }
+
                 .tile-overlay-design{
                     background:linear-gradient(160deg, #fff 23%, #54a8e0 92%)!important;
                 }
+
                 .tile-overlay{
                     margin-top:120px;
                     height:700px;
