--- a/resources/scss/public/partials/_nav.scss
+++ b/resources/scss/public/partials/_nav.scss
@@ -3,8 +3,6 @@ nav{
     img{
         width:50px;
         height:50px;
-        border-radius:50%;
-        background-color:#fff;
         position:relative;
         z-index:2;
     }
@@ -26,7 +24,7 @@ nav{
             a{
 
                 text-decoration: none;
-                color:#fff;
+                color:#fff!important;
                 padding-bottom:5px;
             }
          }
