--- a/resources/scss/public/partials/_laptop.scss
+++ b/resources/scss/public/partials/_laptop.scss
@@ -57,6 +57,7 @@
             }
 
             color-picker{
+                
                 display:block;
                 height:70%;
                 width:50%;
@@ -68,18 +69,58 @@
                 background-color:#fff;
                 z-index:1000;
                 text-align:center;
-                padding:40px 15px;
+                animation:open 0.07s ease-in 1;
 
-                p{
-                    color:$gray-font;
+                .nav-bar{
+                    position:absolute;
+                    width:100%;
+                    height:30px;
+                    background-color:#333;
+
+                    p{
+                        display:inline-block;
+                        left:-27px;
+                        font-size:12px;
+                    }
+
+                    .icon-wrapper{
+                        display:table;
+                        height:30px;
+                        padding-top:4px;
+                        padding-right:10px;
+                        float:right;
+                        i{
+                            display:inline-block;
+                            margin-left:15px;
+                            color:#fff;
+                        }
+                    }
                 }
 
-                button{
-                    margin-top:20px;
+                .content{
+                    margin-top:50px;
+                    text-align:center;
+                    p{
+                        color:$gray-font;
+                    }
+
+                    button{
+                        margin-top:20px;
+                        color:#fff;
+                    }
                 }
             }
 
-            i{
+            @keyframes open{
+                0%{
+                    transform:scale(0.1);
+                }
+                100%{
+                    transform:scale(1);
+                }
+            }
+
+            .right-corner{
                 position:absolute;
                 z-index:300;
                 right:15px;
