working on alert toast

--- a/resources/scss/public/partials/_nav.scss
+++ b/resources/scss/public/partials/_nav.scss
@@ -22,7 +22,7 @@ nav{
             font-size:17px;
 
             a{
-
+                opacity:0.7;
                 text-decoration: none;
                 color:#fff!important;
                 padding-bottom:5px;
