--- a/resources/scss/public/partials/_all.scss
+++ b/resources/scss/public/partials/_all.scss
@@ -15,3 +15,11 @@
 @import 'treehouse';
 @import 'mouse';
 @import 'alert';
+
+
+/* Backend */
+@import 'backend/login';
+@import 'backend/topbar';
+@import 'backend/menubar';
+@import 'backend/news';
+@import 'backend/addNews';
