working on showcase popup

--- a/resources/scss/public/partials/_treehouse.scss
+++ b/resources/scss/public/partials/_treehouse.scss
@@ -139,6 +139,7 @@
                 &:last-child{
                     text-align:right;
                      border-left:1px solid #eee;
+                     margin-bottom:70px;
 
                      @media only screen and (max-width:991px){
                          border-left:none;
