--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -17,7 +17,9 @@
             margin-left: auto;
             margin-right: auto; 
             width: 1275px;
-            height:875px;
+            height:90%;
+            display:flex;
+            flex-direction: column;
 
             div{
                 box-shadow:$standard-shadow;
@@ -25,12 +27,12 @@
 
             .image-view{
                 position:absolute;
-                left:0;
-                top:0;
+                float:left;
                 width:858px;
-                height:720px;
+                height:100%;
                 background-color:#fff;
                 overflow-y:scroll;
+                flex:1;
 
                 &::-webkit-scrollbar { 
                     display: none; 
@@ -46,6 +48,7 @@
                 top:0;
                 width:400px;
                 height:140px;
+                min-height:105px;
                 background-color:#fff;
                 text-align:center;
 
@@ -62,7 +65,11 @@
                 height:435px;
                 overflow:hidden;
                 background-color:#fff;
-                padding-top:195px;
+                flex-grow: 1;
+
+                .desc{
+                    margin-top:195px;
+                }
 
                 .slant{
                     position:absolute;
@@ -83,6 +90,7 @@
                     p{
                         transform:skewY(4deg);
                         font-size:12px;
+                        
                     }
                 }
 
@@ -124,6 +132,16 @@
                 height:135px;
                 width:858px;
                 background-color:$graytone-background;
+
+                .no-image{
+                    position:absolute;
+                    width:100%;
+                    height:100%;
+                    background-color:rgba(0,0,0,0.50);
+                    text-align:center;
+                    padding-top:35px;
+
+                }
             }
         }
     }
