--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -29,7 +29,7 @@
                 position:absolute;
                 float:left;
                 width:858px;
-                height:100%;
+                height:82%;
                 background-color:#fff;
                 overflow-y:scroll;
                 flex:1;
@@ -51,6 +51,12 @@
                 min-height:105px;
                 background-color:#fff;
                 text-align:center;
+
+                .fa-times{
+                    position:absolute;
+                    right:5px;
+                    top:5px;
+                }
 
                 h2{
                     font-size:16px;
