working on technology for each showcase backend

--- a/resources/scss/public/partials/_all.scss
+++ b/resources/scss/public/partials/_all.scss
@@ -24,3 +24,5 @@
 @import 'backend/menubar';
 @import 'backend/news';
 @import 'backend/addNews';
+@import 'backend/tech';
+@import 'backend/addTech';
