--- a/resources/scss/public/partials/_showcase-focus.scss
+++ b/resources/scss/public/partials/_showcase-focus.scss
@@ -6,7 +6,7 @@
     height: 100%;
     width: 100%;
     background-color:rgba(0,0,0,0.48);
-    z-index:99999;
+    z-index:999;
     
 
     .middle {
@@ -61,6 +61,21 @@
                 h2{
                     font-size:16px;
                     letter-spacing:2px;
+                }
+
+                .icon-wrapper{
+                    box-shadow:none;
+                    margin-top:35px;
+
+                    figure{
+                        display:inline-block;
+
+                        img{
+                            width:30px;
+                            margin-left:5px;
+                            margin-right:5px;
+                        }
+                    }
                 }
             }
             .description-view{
@@ -151,4 +166,7 @@
             }
         }
     }
+}
+.showme{
+    z-index:999999!important;
 }
